# hipCOMP-core

./: CHANGELOG.md  CMakeLists.txt  NOTICES.md  README.md
cmake/: hipcomp-config.cmake.amd.in  hipcomp-config.cmake.nvidia.in
include/: hipcomp.h  hipcomp.hpp
include/hipcomp/: ans.h  ans.hpp  bitcomp.h  bitcomp.hpp  cascaded.h  cascaded.hpp  gdeflate.h  gdeflate.hpp  hipcompManager.hpp  hipcompManagerFactory.hpp  lz4.h  lz4.hpp  shared_types.h  snappy.h  snappy.hpp
include/hipcomp/hip/: hip_cooperative_groups.h  hip_runtime.h
include/hipext/: hip_cooperative_groups.h
include/hipext/hip_cooperative_groups_ext/: amd_cooperative_groups_ext.cuh
include/hipext/hip_warp_primitives/: amd_warp_primitives.cuh
scripts/: build_dev_debug.sh  build_dev_release.sh
share/snappy/: hipcomp_snappy.py  len3_mask.py  len3_mask_64.cpp  len3_mask_64.py  snappy_example.py
src/: BitPackGPU.h  BitPackGPU.hip  CMakeLists.txt  CascadedKernels.hiph  Check.cpp  Check.h  DeltaGPU.h  DeltaGPU.hip  HipUtils.h  HipUtils.hip  LZ4Kernels.hiph  LZ4Types.h  RunLengthEncodeGPU.h  RunLengthEncodeGPU.hip  TempSpaceBroker.cpp  TempSpaceBroker.h  common.h  device_functions.hiph  device_types.h  hipcomp_api.cpp  hipcomp_hipcub.hiph  type_macros.h  unpack.h
src/highlevel/: ANSManager.hpp  BatchManager.hpp  BitcompManager.hip  BitcompManager.hpp  CascadedHlifKernels.h  CascadedHlifKernels.hip  CascadedManager.hpp  CompressionConfigs.cpp  CompressionConfigs.hpp  GdeflateBatchManager.hpp  GdeflateManager.cpp  LZ4HlifKernels.h  LZ4HlifKernels.hip  LZ4Manager.hpp  ManagerBase.hpp  PinnedPtrs.hpp  SnappyHlifKernels.h  SnappyHlifKernels.hip  SnappyManager.hpp  hipcompManagerFactory.cpp
src/highlevel/test/: CMakeLists.txt  PinnedPtrPool_test.cpp
src/hipcomp_common_deps/: hlif_shared.hiph  hlif_shared_types.hpp
src/lowlevel/: BitcompBatch.hip  CascadedBatch.hip  LZ4Batch.cpp  LZ4CompressionKernels.h  LZ4CompressionKernels.hip  SnappyBatch.cpp  SnappyBatchKernels.h  SnappyBatchKernels.hip  ansBatch.cpp  gdeflateBatch.cpp  gdeflateKernels.h  gdeflateKernels.hip
src/lowlevel/test/: CMakeLists.txt
src/snappy/: compression.hiph  compression_state.hiph  config.h  decompression.hiph  decompression_decode.hiph  decompression_decode_strategies.hiph  decompression_decode_warp_scans.hiph  decompression_prefetch.hiph  decompression_process.hiph  decompression_state.hiph  symbol.hiph  types.h
src/test/: BitPackGPU_test.cpp  CMakeLists.txt  DeltaGPU_test.cpp  HipUtils_test.cpp  RunLengthEncodeGPU_test.cpp  SnappyLargeTokens_test.cpp  TempSpaceBroker_test.cpp
tests/: CMakeLists.txt  test_ans_batch_c_api.c  test_batch_c_api.h  test_bitcomp.cpp  test_bitcomp_batch.cpp  test_bitcomp_batch_c_api.c  test_cascaded.cpp  test_cascaded_batch.cpp  test_cascadedbatch_c_api.c  test_common.h  test_gdeflate.cpp  test_gdeflate_batch_c_api.c  test_lz4.cpp  test_lz4batch_c_api.c  test_random_lz4.cpp  test_snappy_app.cpp  test_snappy_batch_c_api.c
